<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_header_general">

        <ListPreference
            android:key="favorite_team"
            android:title="@string/pref_title_team_favorite"
            android:defaultValue="81"
            android:entries="@array/pref_teams_list_titles"
            android:entryValues="@array/pref_teams_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

        <EditTextPreference
            android:key="next_days"
            android:title="@string/pref_title_ndays"
            android:summary="@string/pref_summary_ndays"
            android:inputType="number"
           />

        <EditTextPreference
            android:key="past_days"
            android:title="@string/pref_title_pdays"
            android:summary="@string/pref_summary_pdays"
            android:inputType="number"
            />


        </PreferenceCategory>

</PreferenceScreen>